--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<html>
   <header class="header">
     <a href="#" class="logo"><span class="logo-k">K</span>ashish.</a>
       <i class='bx bx-menu' id="menu-icon"></i>
@@ -42,14 +41,14 @@ I craft fast, responsive, and user-friendly digital experiences.
     </div>
 <div class="img-wrapper">
   <div class="img-box home-img">
-  <img src="img.jpeg" alt="">
+  <img src="images/img.jpeg" alt="">
 </div>
 </div>
 </section>
 
 <section class="about" id="about">
   <div class="about-img ">
-    <img src="img.jpeg" alt="">
+    <img src="images/img.jpeg" alt="">
   </div>
   <div class="about-content">
     <h2 class="heading">About <span>Me</span></h2>
@@ -69,20 +68,31 @@ I craft fast, responsive, and user-friendly digital experiences.
   </div>
   <div class="skills-grid">
     <div class="skill-card" data-skill="fullstack">
-      <div class="skill-icon">🚀</div>
+      <div class="skill-icon">
+        <i class="fa-solid fa-laptop"></i>
+      </div>
       <h3 class="skill-title">Full Stack Development</h3>
-      <p class="skill-description">End-to-end application development from concept to deployment</p>
+<p class="skill-description">HTML, CSS, JavaScript, React, Node.js, Express, MongoDB
+</p>
+<p class="skill-titles">Skilled in building complete web applications from scratch, covering both frontend and backend development. Proficient in creating responsive user interfaces using HTML, CSS, and JavaScript frameworks like React. Experienced in building robust server-side logic with Node.js and Express, and integrating with databases such as MongoDB.</p>
     </div>
     <div class="skill-card" data-skill="database">
-      <div class="skill-icon">🗄️</div>
-      <h3 class="skill-title">Database Management</h3>
-      <p class="skill-description">SQL and NoSQL databases, data modeling, and optimization techniques</p>
+  <div class="skill-icon">
+    <i class="fa-solid fa-database"></i>
+  </div>
+     <h3 class="skill-title">Database Management</h3>
+<p class="skill-description">MySQL, MongoDB, Data Modeling, Query Optimization</p>
+<p class="skill-titles">Experienced in working with both SQL and NoSQL databases such as MySQL,and MongoDB. Skilled in designing efficient database schemas, performing data modeling, and writing optimized queries for improved performance. Capable of managing data securely and integrating databases with web applications for real-time functionality.</p>
+
     </div>
     <div class="skill-card" data-skill="tools">
-      <div class="skill-icon">🛠️</div>
-      <h3 class="skill-title">Development Tools</h3>
-      <p class="skill-description">Git, Webpack, Testing frameworks, IDE optimization, and productivity tools</p>
-    </div>
+      <div class="skill-icon">
+        <i class="fa-solid fa-gear"></i>
+      </div>
+     <h3 class="skill-title">Development Tools</h3>
+<p class="skill-description">GitHub, Postman, Figma, VS Code, Chrome</p>
+<p skilss="skill-titles">Proficient in using GitHub for version control and team collaboration, and VS Code as the primary code editor with useful extensions for enhanced productivity. Skilled in designing responsive UI/UX with Figma and testing APIs effectively using Postman. Experienced in debugging and optimizing web applications using Chrome.</p>
+
   </div>
 </div>
 </section>           
@@ -95,47 +105,43 @@ I craft fast, responsive, and user-friendly digital experiences.
   <div class="projects-grid">
     <div class="project-card">
       <div class="project-image">
-        <img src="project1.png" alt="Healthy-U Connections" class="project-img" loading="lazy">
+        <img src="images/project1.png" alt="Healthy-U Connections" class="project-img" loading="lazy">
       </div>
       <div class="project-info">
         <h3 class="project-title">Healthy-U Connections</h3>
         <p class="project-category">Full Stack Development</p>
         <p class="project-description">
-          A modern e-commerce platform with advanced features including real-time inventory, payment processing, and responsive design for optimal user experience.
+          Healthy-U Connections is a user-friendly website dedicated to promoting healthy living through nutritious recipes and community-shared content. Users can explore a wide range of healthy recipes and also contribute by writing and sharing their own health blogs Healthy-U Connections is your go-to platform to eat better and inspire others with your wellness journey through all things healthy and homemade.
         </p>
       </div>
     </div>
-
     <div class="project-card">
       <div class="project-image">
-        <img src="projects2.jpg" alt="E-Commerce Platform" class="project-img" loading="lazy">
+        <img src="images/projects2.jpg" alt="E-Commerce Platform" class="project-img" loading="lazy">
       </div>
       <div class="project-info">
-        <h3 class="project-title">E-Commerce Platform</h3>
+        <h3 class="project-title">Brew Bliss</h3>
         <p class="project-category">Full Stack Development</p>
         <p class="project-description">
-          A collaborative task management application with real-time updates, team collaboration features, and intuitive drag-and-drop interface.
+          Brew Bliss is a modern eCommerce website crafted for coffee lovers. It offers a wide range of premium coffee beans, blends, and brewing accessories—all in one place. Whether you prefer rich espresso, smooth cold brews, or organic single-origin beans, Brew Bliss makes it easy to shop your favorite flavors online and have them delivered to your doorstep. Wake up to quality with every cup!
         </p>
       </div>
     </div>
 
     <div class="project-card">
       <div class="project-image">
-        <img src="projects4.jpg" alt="Music Gallery" class="project-img" loading="lazy">
+        <img src="images/projects4.jpg" alt="Music Gallery" class="project-img" loading="lazy">
       </div>
       <div class="project-info">
         <h3 class="project-title">Music Gallery</h3>
         <p class="project-category">Full Stack Development</p>
         <p class="project-description">
-          An interactive analytics dashboard with real-time data visualization, customizable charts, and comprehensive reporting features.
-        </p>
+          Music Gallery is a curated space where users can explore and enjoy a wide variety of music collections. From classic tunes to trending tracks, this gallery brings together diverse genres and artists in one place. Users can browse, listen, and discover new music, making it a perfect hub for music lovers to connect with sounds that inspire and energize.
+       </p>
       </div>
-    </div>
-  </div>
+      </div>
+      </div>
 </section>
-
-
-  
    <section class="contact" id="contact">
     <h2 class="heading">Contact<span>Me!</span></h2>
     <form action="#">
@@ -153,7 +159,7 @@ I craft fast, responsive, and user-friendly digital experiences.
    </section>
    <footer class="footer">
     <div class="footer-text">
-      <p>Copyright &copy; 2025 by kashish | All Rights Reserved.</p>
+      <p>Copyright &copy; 2025, All Rights Reserved.</p>
     </div>
     <div class="footer-iconTop">
       <a href="#home"><i class='bx bxs-up-arrow-alt'></i></a>
