--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ I craft fast, responsive, and user-friendly digital experiences.
 
 <section id="skills" class="skills-container">
   <div class="section-header">
-    <h2 class="heading"> Skills</h2>
+    <h2 class="heading">Skills</h2>
   </div>
   <div class="skills-grid">
     <div class="skill-card" data-skill="fullstack">
@@ -72,30 +72,29 @@ I craft fast, responsive, and user-friendly digital experiences.
         <i class="fa-solid fa-laptop"></i>
       </div>
       <h3 class="skill-title">Full Stack Development</h3>
-<p class="skill-description">HTML, CSS, JavaScript, React, Node.js, Express, MongoDB
-</p>
-<p class="skill-titles">Skilled in building complete web applications from scratch, covering both frontend and backend development. Proficient in creating responsive user interfaces using HTML, CSS, and JavaScript frameworks like React. Experienced in building robust server-side logic with Node.js and Express, and integrating with databases such as MongoDB.</p>
+      <p class="skill-description">HTML, CSS, JavaScript, React, Node.js, MongoDB.</p>
+      <p class="skill-titles">Skilled in building complete web applications from scratch, covering both frontend and backend development. Proficient in creating responsive user interfaces using HTML, CSS, and JavaScript frameworks like React. Experienced in building robust server-side logic with Node.js and Express, and integrating with databases such as MongoDB.</p>
     </div>
-    <div class="skill-card" data-skill="database">
-  <div class="skill-icon">
-    <i class="fa-solid fa-database"></i>
-  </div>
-     <h3 class="skill-title">Database Management</h3>
-<p class="skill-description">MySQL, MongoDB, Data Modeling, Query Optimization</p>
-<p class="skill-titles">Experienced in working with both SQL and NoSQL databases such as MySQL,and MongoDB. Skilled in designing efficient database schemas, performing data modeling, and writing optimized queries for improved performance. Capable of managing data securely and integrating databases with web applications for real-time functionality.</p>
 
+    <div class="skill-card" data-skill="database">
+      <div class="skill-icon">
+        <i class="fa-solid fa-database"></i>
+      </div>
+      <h3 class="skill-title">Database Management</h3>
+      <p class="skill-description">MySQL, MongoDB, Data Modeling, Query Optimization.</p>
+      <p class="skill-titles">Experienced in working with both SQL and NoSQL databases such as MySQL and MongoDB. Skilled in designing efficient database schemas, performing data modeling, and writing optimized queries for improved performance. Capable of managing data securely and integrating databases with web applications for real-time functionality.</p>
     </div>
+
     <div class="skill-card" data-skill="tools">
       <div class="skill-icon">
         <i class="fa-solid fa-gear"></i>
       </div>
-     <h3 class="skill-title">Development Tools</h3>
-<p class="skill-description">GitHub, Postman, Figma, VS Code, Chrome</p>
-<p skilss="skill-titles">Proficient in using GitHub for version control and team collaboration, and VS Code as the primary code editor with useful extensions for enhanced productivity. Skilled in designing responsive UI/UX with Figma and testing APIs effectively using Postman. Experienced in debugging and optimizing web applications using Chrome.</p>
-
+      <h3 class="skill-title">Development Tools</h3>
+      <p class="skill-description">GitHub, Postman, Figma, VS Code, Chrome.</p>
+      <p class="skill-titles">Proficient in using GitHub for version control and team collaboration, and VS Code as the primary code editor with useful extensions for enhanced productivity. Skilled in designing responsive UI/UX with Figma and testing APIs effectively using Postman. Experienced in debugging and optimizing web applications using Chrome.</p>
+    </div>
   </div>
-</div>
-</section>           
+</section>
 <section id="projects" class="projects">
   <div class="section-header">
     <h2 class="heading">Projects</h2>
@@ -136,18 +135,19 @@ I craft fast, responsive, and user-friendly digital experiences.
         <h3 class="project-title">Music Gallery</h3>
         <p class="project-category">Full Stack Development</p>
         <p class="project-description">
-          Music Gallery is a curated space where users can explore and enjoy a wide variety of music collections. From classic tunes to trending tracks, this gallery brings together diverse genres and artists in one place. Users can browse, listen, and discover new music, making it a perfect hub for music lovers to connect with sounds that inspire and energize.
+ Music Gallery is a curated space where users can explore and enjoy a wide variety of music collections. From classic tunes to trending tracks, this gallery brings together diverse genres and artists in one place. Users can browse, listen, and discover new music, making it a perfect hub for music lovers to connect with sounds that inspire and energize. With personalized recommendations, every visit feels like a fresh musical journey.
+
        </p>
       </div>
       </div>
       </div>
 </section>
    <section class="contact" id="contact">
-    <h2 class="heading">Contact<span>Me!</span></h2>
+    <h2 class="heading">Contact<span> Me!</span></h2>
     <form action="#">
       <div class="input-box">
        <input type="text" placeholder="Full Name">
-      <input type="email" placeholder="Email Address">
+       <input type="email" placeholder="Email Address">
       </div>
        <div class="input-box">
        <input type="number" placeholder="Mobile Number">
@@ -169,7 +169,6 @@ I craft fast, responsive, and user-friendly digital experiences.
      
    <script src="https://unpkg.com/scrollreveal"></script>
    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-
 
   <script src="main.js"></script>
 
