--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ I craft fast, responsive, and user-friendly digital experiences.
     <img src="images/img.jpeg" alt="">
   </div>
   <div class="about-content">
-    <h2 class="heading">About <span>Me</span></h2>
+    <h2 class="heading">About Me</h2>
     <h3>Full Stack Developer</h3>
     <p>I’m a passionate Full Stack Developer with expertise in building dynamic, responsive, and user-friendly web applications. I specialize in technologies like HTML, CSS, JavaScript, React, Node.js, MongoDB, MySQL,and Java. From designing clean front-end interfaces to developing efficient back-end systems, I enjoy turning ideas into real, functional products. I’m always eager to learn new tools, improve my skills, and take on exciting challenges in web development.
 
